c_plus_julich/my_excercises/bash_commands
> Hello world part:
------------------
g++ --std=c++11 -pedantic helloworld.cc -o hello
-----
g++ --std=c++14 -pedantic helloworld.cc -o hello
g++: error: unrecognized command line option '--std=c++14'

clang++ -std=c++14 -pedantic -stdlib=libc++ helloworld.cc
error: invalid value 'c++14' in '-std=c++14'

clang++ -std=c++11 -pedantic -stdlib=libc++ helloworld.cc
helloworld.cc:3:10: fatal error: 'iostream' file not found

--------------
# It is needed to load the modules to have c++14 available
train052@zam1068: module load gcc/6.1.0
train052@zam1068: module load llvm/3.8.0
train052@zam1068: clang++ -std=c++11 -pedantic -stdlib=libc++ helloworld.cc
train052@zam1068: clang++ -std=c++14 -pedantic -stdlib=libc++ helloworld.cc
g++ --std=c++14 -pedantic helloworld.cc -o hello
train052@zam1068: ./hello 
Hello, world!

# To see the details using -v parameter of gcc
g++ --std=c++14 -pedantic -v helloworld.cc -o hello

---------------
> cd /home/train052/day1/examples/multdef
> g++ --std=c++14 -pedantic -c file1.cc
train052@zam1068: g++ --std=c++14 -pedantic -c file2.cc 
train052@zam1068: g++ --std=c++14 -pedantic -c main.cc  
train052@zam1068: g++ --std=c++14 -pedantic file1.o file2.o main.o 

# After removing keyword 'extern'
main.cc:2:5: error: redefinition of 'int D'
 int D=56;
     ^
In file included from main.cc:1:0:
somehdr.hh:2:5: note: 'int D' previously declared here
 int D;
     ^

# Paralel processing
module load tbb
g++ --std=c++14 -pedantic $TBB_INCLUDES $TBB_LIBRARIES dasxpcy.cc -o dasxpcy

